--- a/Views/Locales/Index.cshtml
+++ b/Views/Locales/Index.cshtml
@@ -3,12 +3,14 @@
     <tr>
         <th>Nombre</th>
         <th>Direccion</th>
+        <th>Borrar</th>
     </tr>
     @foreach(var local in Model)
             {
-                <tr>
-                    <td>@local.Nombre</td>
-                    <td>@local.Direccion</td>
-                </tr>
+<tr>
+    <td>@local.Nombre</td>
+    <td>@local.Direccion</td>
+    <td><a href="/locales/borrar/@local.IdLocal">Borrar</a></td>
+</tr>
             }
 </table>
