update local logic is working

--- a/Views/Locales/Index.cshtml
+++ b/Views/Locales/Index.cshtml
@@ -3,6 +3,7 @@
     <tr>
         <th>Nombre</th>
         <th>Direccion</th>
+        <th>Modificar</th>
         <th>Borrar</th>
     </tr>
     @foreach(var local in Model)
@@ -10,6 +11,7 @@
 <tr>
     <td>@local.Nombre</td>
     <td>@local.Direccion</td>
+    <td><a href="/locales/modificar/@local.IdLocal">Modificar</a></td>
     <td><a href="/locales/borrar/@local.IdLocal">Borrar</a></td>
 </tr>
             }
