--- a/Views/Locales/Modificar.cshtml
+++ b/Views/Locales/Modificar.cshtml
@@ -1,4 +1,7 @@
 ﻿@model PracticaConBDD.Models.Local
+@{ 
+    List<PracticaConBDD.Models.Prendum> TodasPrendas = (List<PracticaConBDD.Models.Prendum>)ViewBag.TodasPrendas; 
+}
 
     <form action="/Locales/Modificar" method="post">
         <input type="hidden" name="IdLocal" value="@Model.IdLocal"/>
@@ -10,6 +13,21 @@
             Direccion:
             <input type="text" name="Direccion" value="@Model.Direccion" />
         </div>
+        <select multiple name="prendasLocal" class="select">
+            @foreach (var lp in TodasPrendas)
+            {
+                if (Model.LocalPrenda.Any(o => o.IdPrenda == lp.IdPrenda))
+                {
+                    <option value="@lp.IdPrenda" selected>@lp</option>
+                }
+                else
+                {
+                    <option value="@lp.IdPrenda" selected>@lp</option>
+                }
+
+            }
+
+        </select>
         <input type="submit" name="Modificar" value="Modificar" />
     </form>
 <form action="/locales" method="post">
