styles to tables

--- a/Views/Locales/Index.cshtml
+++ b/Views/Locales/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<PracticaConBDD.Models.Local>
-<table>
+    <div><a asp-controller="Local" asp-action="Alta">Crear</a></div>
+<table class="table">
     <tr>
         <th>Nombre</th>
         <th>Direccion</th>
